<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/CircularDeterminateProgressBar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:progress="0" />

        <TextView
            android:id="@+id/text_view_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="@+id/progress_bar"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toTopOf="@+id/progress_bar"
            tools:text="60%" />

        <Button
            android:id="@+id/button_decr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorDeepPink"
            android:text="- 10%"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toStartOf="@+id/button_incr"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <Button
            android:id="@+id/button_incr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPurple"
            android:text="+ 10%"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/button_decr"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <Button
            android:id="@+id/auto_incr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="Auto increase"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/button_incr"
            app:layout_constraintStart_toStartOf="@+id/button_decr"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />

        <!--android:progressDrawable="@drawable/progress_states"-->

        <ProgressBar
            android:id="@+id/secondProgressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            android:padding="8dp"
            android:progressDrawable="@drawable/progress_states"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/auto_incr" />

        <TextView
            android:id="@+id/tv_second_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="@+id/secondProgressBar"
            app:layout_constraintEnd_toEndOf="@+id/secondProgressBar"
            app:layout_constraintStart_toStartOf="@+id/secondProgressBar"
            app:layout_constraintTop_toTopOf="@+id/secondProgressBar"
            tools:text="60%" />


        <Button
            android:id="@+id/btnSecondProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="Auto fill up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/secondProgressBar"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/secondProgressBar"
            app:layout_constraintTop_toBottomOf="@+id/secondProgressBar" />


        <ProgressBar
            android:id="@+id/secondProgressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="32dp"
            android:minWidth="150dp"
            android:minHeight="150dp"
            android:padding="8dp"
            android:progressDrawable="@drawable/tear_drop_progress_states"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSecondProgressBar" />

        <TextView
            android:id="@+id/tv_second_progress2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintBottom_toBottomOf="@+id/secondProgressBar2"
            app:layout_constraintEnd_toEndOf="@+id/secondProgressBar2"
            app:layout_constraintStart_toStartOf="@+id/secondProgressBar2"
            app:layout_constraintTop_toTopOf="@+id/secondProgressBar2"
            tools:text="60%" />


        <Button
            android:id="@+id/btnSecondProgressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorAccent"
            android:padding="16dp"
            android:text="Auto fill up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="@+id/secondProgressBar2"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/secondProgressBar2"
            app:layout_constraintTop_toBottomOf="@+id/secondProgressBar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>